--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zadnji",
+  "name": "artbynejra-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "express": "^4.19.2",
     "next": "13.4.12",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
